[package]
name = "kube-shard-label"
version = "0.1.0"
edition = "2021"

[lib]
name = "shardlabel"

[[bin]]
name = "crd"

[[bin]]
name = "controller"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["now"] }
clap = { version = "4.5.0", features = ["derive"] }
config = "0.14.0"
fnv = "1.0.7"
futures = "0.3.30"
json-patch = "1.2.0"
k8s-openapi = { version = "0.21.0", features = ["latest", "schemars"] }
kube = { version = "0.89.0", features = ["admission", "derive", "runtime", "jsonpatch"] }
kube-subcontroller = "0.0.2"
log = "0.4.20"
schemars = "0.8.16"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
